--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </div>
     <div class="container">
         <div class="panel active">
-            <img src="supermarket.png" alt="Supermarket" class="center">
+            <img src="https://github.com/hannaailan/web/blob/main/supermarket.png" alt="Supermarket" class="center">
             <h3>Supermarket</h3>
         </div>
       </div>
