--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </header>
      
     <div class="container">
-        <img src="pics/supermarket.jpg" id="image">
+        <img src="pics/supermarket.png" id="image">
         <span id="name">products</span>
     </div>
     <script src="script.js"></script>
