--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
      
     <div class="container">
         <img src="pics/supermarket.png" id="image">
-        <span id="name">products</span>
+        <h1 id="name">products</h1>
     </div>
     <script src="script.js"></script>
 </body>
