--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 <body>
     <header>
         <h1>Recipe Finder</h1>
-        <button onclick="btn()">next items</button>
+        <button onclick="btn()">products</button>
     </header>
      
     <div class="container">
         <img src="pics/supermarket.png" id="image">
-        <h1 id="name">products</h1>
+        <h1 id="name">Supermarket</h1>
     </div>
     <script src="script.js"></script>
 </body>
